updated HUD project page

--- a/fha.html
+++ b/fha.html
@@ -82,7 +82,7 @@
 		</div>
 	</div>
 
-	<div class="full-width-mid-page" style="text-align: center; color: white;">
+	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--mediumgray)">
 			<h2 style="padding-top: 5%;">Where we started</h2>
 			<h3 style="padding-left: 15%; padding-right: 15%">All of FHA’s content was housed (no pun intended) within the Housing section of HUD.gov, their parent agency’s site. Part I of the project was launching fha.gov as a standalone site.</h3>
@@ -238,6 +238,8 @@
 					<li>Delivered 25 high-fidelity mockups</li>
 					<li>Built 200+ Custom, scalable Sketch symbols from scratch</li>
 				</ul> 
+
+			<p>All in all, this project really challenged me to answer the question - "so what?" Time and time again, I learned the value of executive summaries and clear-as-day explanations of complex topics. When you spend so much time doing research, it's easy to get stuck in the weeds. But clients don't care about what's in the weeds - they care about the big picture, and what we can do to solve their problems. ✨</p>
 		</div>
 	</div>
 
