--- a/hud.html
+++ b/hud.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 
-	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
+	<div class="full-width" style="background-color: var(--green);">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -55,200 +55,106 @@
 			</div>
 		</div>
 
-		<img src="pics/fha-branding.png" class="big-pic">
+		<img src="pics/HUD_ds.png" class="big-pic">
 	</div>
 
 	<div class="panel context">
 		<div class="context-summary">
 			<h2>Context</h2>
 			<h3>
-				I co-led the redesign and launch of fha.gov, the Federal Housing Administration’s consumer-facing site, which serves over 8 million single family homeowners. 
-			<h3>
+				I conducted a component audit of existing high-fidelity mockups and built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.
+			</h3>
 			<div class="short-divider"></div>
 			<p>	
-				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-debth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
+				Similar to the <a href="emilyporat.com/fha.html">1.0 launch of FHA.gov</a>, the Dept. of Housing & Urban Development (HUD) wanted a visual facelift before launching into a full redesign. The goal of this shorter-term effort was to create a clean, modern version of HUD's homepage and a few select high-traffic pages with the ultimate goal of using the new pages as templates for future redesign.
 			</p>
+
+			<p>
+				I was brought in to organize and ensure consistency across the work another Visual Designer had already done. The Visual Designer I worked with had an excellent creative vision and illustration skills (not my strong suit), but was moving quickly and hadn't created any symbols or organized his files. Believe it or not, I relish in these kinds of organizational tasks, so it was a match made in heaven.
+			</p>
+
+			<p><em>Read time: 3.5 mins</em></p>
+
 		</div>
 
 		<div class="context-specifics">
 			<h4>Length</h4>
-			<div class="context-description"><p>9 months</p></div>
+			<div class="context-description"><p>2 months</p></div>
 			<h4>Team</h4>
-			<div class="context-description"><p>I co-lead research & design for a team of 12.</p></div>
+			<div class="context-description"><p>I worked with a Visual Designer & CD</p></div>
 			<h4>Skills</h4> 
-			<div class="context-description"><p>Heuristic Evaluation, User Interview, Usability Testing, Affinity Mapping, Wireframing, Prototyping, Style & Brand Development</p></div>
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Excel</p></div>
+			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
+			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract</p></div>
 		</div>
 	</div>
 
-	<div class="divider"></div>
-
-	<div class="panel" id="summary">
-		<h2 class="body right">Branding Refresh</h2>
-			<div class="body right">
-				<p>Before the long-term engagement began, step one was launching FHA.gov as a standalone site from its parent agency's site, HUD.gov. At that time, all FHA content was housed within various sections of HUD.gov. When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides (see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
-
-				<p>The client decided to move forward with the Catalyst branding. Given that this soft launch was meant to be a quick and light lift, we strategically selected a few key screens to redesign with the new branding, and carried over the underlying IA from the Housing portion of the HUD.gov site.</p>
-			</div>
-	</div>
-
-	<div class="full-width">
-		<div class="panel dark">
-			<img class="pic-left" src="pics/FHA/branding-options.png">
+	<div class="full-width-mid-page">
+		<div class="panel dark" style="background-color: var(--mediumgray)">
+			<h2 style="padding-top: 5%;">Where we started</h2>
+			<h3 style="padding-left: 15%; padding-right: 15%">There weren't any symbols or text styles. Groups were ad-hoc and most didn't have labels.</h3>
+			<img style="padding-top: 5%" class="pic-left" src="pics/HUD/where-we-started.png">
 		</div>
 	</div>
 
-	<div class="panel" id="summary">
-		<h2 class="body right">1.0 Launch</h2>
-			<div class="body right">
-				<p>We launched <a target="_blank" href="http://FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page. All design decisions were based on assumptions and client priorities. For example, while FHA's primary customer is mortgage <i>lenders</i>, the client wanted to focus the new site on the <i>consumer</i> audience: homeowners and homebuyers.</p>
-				<p>Regardless of these constraints, I was still able to drastically improve the page-level architecture to make information more accessible and easy to comprehend. For example, I envisioned the COVID Resources page (below) as a template for future content pages. To optimize for readability and clarity, I applied:</p>
-				<ul>
-					<li>Clear and consistent use of headers and subheaders to facilitate content chunking.</li>
-					<li>Highlight boxes to make key information easier to pick out, catering to the human tendency to scan rather than read.</li>
-					<li>An interactive table of contents to provide an overview and easy page navigation so users can jump right to relevant topics.</li>
-				</ul>
-				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov." style="background-color: white; box-shadow: 0px 0px 5px 5px rgba(100,100,100,0.1);">
-			</div>
-	</div>
 
-	<div class="divider"></div>
-
-	<div class="panel" id="user research">
-		<h2 class="body right">User Research</h2>
+	<div class="panel" id="Component Audit">
+		<h2 class="body right">Component Audit</h2>
 			<div class="body right">
-				<p>With the initial branding refresh wrapped up, we turned to the research phase of the larger engagement. We took a three step approach:</p>
-				<ul>
-					<li>Heuristic evaluation – analyze current state of the FHA website experience </li>
-					<li>Stakeholder Interviews – semi-structured conversations to understand FHA priorities</li>
-					<li>User Interviews – semi-structured conversations to understand user needs and preferences, pain points, and usability issues</li>
-				</ul> 
-				<h3>Heuristic Evaluation</h3>
-				<p>Pages were selected for evaluation based on browsing data from March 1 – May 12, 2020. We chose to look at the top 11 viewed FHA-related pages on HUD.gov. We used the <a target="_blank" href="https://uitraps.com/">Tenets & Traps</a> framework to call out problem areas. Here are two key takeaways:
-				<ul>
-					<li>Information overload or information "under-load" - most pages are used as link farms, while other pages only have a few sentences of text.</li>
-					<li>Consistent inconsistency - type, color, and UI elements are not used consistently (see below for some examples).</li>
-				</ul> 
+				<p>My first step was to simply take stock of all the components, text styles, and colors. I started with the initial style guide and built style sheets for each of those areas. I marked off text styles that were used multiple times and noticed that H3 and "Paragraph XL" were both missing. I also found a teal color that was shown in the original style guide but not actually used anywhere throughout the UI. Through this exercise, we were able to remove those unnecessary styles and tighten up the existing ones.
 				</p>
-				<img src="pics/FHA/HUD-UI.png" class="pic-right" style="background-color: white; width: 70%; box-shadow: 0px 0px 5px 5px rgba(100,100,100,0.1);">
-				<h3>Stakeholder Interviews</h3>
-				<p>Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main customer service vehicle.</p>
 
-				<div class="space"></div>
-				<h4>Analysis Process</h4>
-				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
+				<p>Throughout this exercise, I also checked all color combos for contrast accessibility and noted all acceptable pairings for our reference.</p>
 
-				<div class="space"></div>
-				<h4>Key Findings</h4>
-				<ul>
-					<li>Organize around user needs, not HUD's org chart (current state).</li>
-					<li>Provide an easier way to access information that is currently buried in long PDF handbooks or spread out across various sections of the site.</li>
-					<li>Leverage existing resources like Housing Counselors and the Resource Center to connect users with the help they need. Provide avenues to escalate specific questions sooner in the process for those who know exactly what they need help with.</li>
-					<li>Continue to make housing and healthcare accessible to vulnerable populations by creating a friendlier web presence for consumers. While FHA stakeholders view their business partners as their primary audience across the board, they all spoke about supporting low-income and first-time homebuyers as their core mission.</li>
-					<li>To build trust in the FHA brand, create a cohesive experience within program offices by applying consistent visual identity, content standards, and layouts. To facilitate stakeholder interactions, follow industry standards observed across competitor sites by using consistent processes, terminology, and organization patterns.</li>
-					<li>Define a clear, intuitive, and logical scope for FHA.gov vs. HUD.gov content. This is especially important for program offices that span across both organizations.</li>
-				</ul>
+				<img src="pics/HUD/audit.png" class="pic-right">
 
+				<p>On the component level, I looked across all pages for inconsistencies and gaps, especially for mobile design. I found some small issues with different shades of gray, type styles for forms, and components that had no mobile counterparts.</p>
+
+				<img src="pics/HUD/audit-components.png" class="pic-right">
+			</div>
+	</div>
+
+	<div class="panel" id="Symbol Creation">
+		<h2 class="body right">Symbol Creation & Organization</h2>
+			<div class="body right">
+				<p>After discussing gaps with my teammate, I began symbolizing components and adding text & layer styles. My goal when creating symbols is always to make them as easy as possible to work with for the end user (aka fellow designers). I'm super cognizant of using helpful labels, making symbols scalable, and nesting symbols so that overrides are easy.
+				</p>
+
+				<img src="pics/HUD/symbols.png" class="pic-right">
+
+				<p>I used atomic design principles to organize my symbols as I created them, dividing components into "Atoms," the smallest possible unit of a component, "Molecules," partial components that combine more than one Atom, and "Organisms," or full-blown components that incorporate multiple Molecules. With a relatively small collection of components, this organization strategy made finding everything quick and easy. I love atomic design because it provides the ease of designing top-down <em>or</em> bottom up.</p>
+
+				<img src="pics/HUD/atomic.gif" class="pic-right">
 
 			</div>
 	</div>
 
-	<div class="full-width">
-		<div class="panel dark">
-			<img class="pic-left" src="pics/FHA/stakeholder-interview-process.png">
-		</div>
+	<div class="panel" id="Symbol Creation">
+		<h2 class="body right">Grids & Responsive Design</h2>
+			<div class="body right">
+				<p>Because we were only designing 4 pages, I wanted to ensure that they would look exactly as we intended on all screen sizes, so I mocked up each page for the 4 standard breakpoints (1440 - XL desktop, 1024 - Standard desktop, 768 - Tablet, 320 - Mobile). 
+				</p>
+
+				<img src="pics/HUD/responsive.png" class="pic-right">
+
+				<p>I also documented the grids I was using for each screen size for easy reference and future development. While most inspect tools allow devs to view these underlying grids, I wanted to make it crystal clear, as I've encountered issues with this in the past.</p>
+
+				<img src="pics/HUD/grids.png" class="pic-right">
+			</div>
 	</div>
 
-	<div class="panel" id="user interviews">
-		<div class="body right">
-			<h3>User Interviews</h3>
-			<p>We conducted 23 one-on-one ethnographic interviews to assess participants’ cognitive, behavioral, and emotional approach to performing tasks with a focus on their interaction with the HUD and FHA websites.</p>
-			<p>Because FHA serves such a broad array of users, we interviewed participants from a variety of user groups, including consumers and business stakeholders across the Single Family, Multifamily, and Healthcare programs. 
-			</p>
-			<p>We didn't have time to go through the typical modeling exercises after Affinity Diagramming, so I pulled together user group 'profiles.'</p>
-		</div>
+	<div class="panel" id="Symbol Creation">
+		<h2 class="body right">Outcome</h2>
+			<div class="body right">
+				<p>As of March 2021, a contractor is developing these pages. Eventually, (fingers crossed 🤞) the entire HUD.gov site will use these templates.
+				</p>
+
+				<p>Apart from creating an organized design system, I also walked through this process with my team and showed them the ropes so that they can integrate atomic design principles into future work. On the other hand, I learned a lot from my Visual counterpart about iconography and his creative process.</p>
+
+				<p>All in all, this project really ignited my love for organization and design systems. At first, it was odd to me that I'm so passionate about research synthesis <em>and</em> UI/design systems, but I've realized that my type-A sensibilities cut across the UX spectrum. Both ends of that spectrum are all about making sense of chaos, which I excel at. ✨</p>
+			</div>
 	</div>
 
-	<div class="full-width">
-		<div class="panel medium">
-			<img class="pic-left" src="pics/FHA/interview-insights.png">
-		</div>
-	</div>
 
-	<div class="panel" id="user interviews">
-		<div class="body right">
-			<h3>Translating Research Insights to Requirements</h3>
-			<p>
-			We pulled out sentiment statements for each user group, came up with broad solutions for each one, and marked select ideas as 'high priority.' This process was inherently bottom up and data-backed. We started with the raw quotes, grouped through affinity diagramming, and presented the groupings and solutions with the strongest supporting evidence.
-			</p>
-			<img src="pics/FHA/user-stories.png" class="pic-right">
-			<p>
-			These statements would become rough blueprints for future user stories. They guided all future design work.
-			</p>
-		</div>
-	</div>
-
-<!-- 	<div class="divider"></div>
-
-	<div class="panel" id="IA">
-		<div class="body right">
-			<h2>Information Architecture</h2>
-			<p>
-			At last, it was time to turn our insights and ideas into actual designs. 
-			</p>
-		</div>
-	</div> -->
-
-<div id="projects">
-
-	<div class="divider"></div>
-	<h1>More Projects</h1>
-
-	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange)">
-		<div class="project-info">
-			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2>Food Management System</h2>
-			<div class="short-divider"></div>
-			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
-			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
-				<h4><i class="fas fa-lock"></i> Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
-		<div class="project-info" style="float: left; margin-left: 0">
-			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2>Learning & Development Portal</h2>
-			<div class="short-divider"></div>
-			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
-			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
-				<h4>Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<div href="rsvpd.html">
-	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
-		<div class="project-info">
-			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2>RSVP'd</h2>
-			<div class="short-divider"></div>
-			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
-			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
-				<h4>Learn More</h4>
-			</button>
-		</div>
-	</div>
-	</div>
-</div>
 	  	
   	<div id="footer"></div>
   	</meta>
