--- a/fms-pos.html
+++ b/fms-pos.html
@@ -50,7 +50,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>Fall 2019 • Deloitte Digital</h4>
+					<h4>2019 - 2020 • Deloitte Digital</h4>
 					<h1 style="color: black">Food Management System</h1>
 				</div>
 			</div>
