--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
   <!-- Featured project -->
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
-      <h4>Winter 2020 • Deloitte Digital</h4>
+      <h4>2020 - 2021 • Deloitte Digital</h4>
       <h2>HUD Design System</h2>
       <h3>As part of HUD.gov's redesign, I conducted a component audit of existing high-fidelity mockups. From there, I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
       <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
@@ -69,7 +69,7 @@
 
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
-      <h4>Spring 2020 - Spring 2021 • Deloitte Digital</h4>
+      <h4>2020 - 2021 • Deloitte Digital</h4>
       <h2>FHA Website Redesign</h2>
       <h3>I co-led the redesign and launch of fha.gov, the Federal Housing Administration’s consumer-facing site, which serves over 8 million single family homeowners.</h3>
       <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -82,7 +82,7 @@
     <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
-        <h4>Fall 2019 - Spring 2020 • Deloitte Digital</h4>
+        <h4>2019 - 2020 • Deloitte Digital</h4>
         <h2>Food Management System</h2>
         <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
         <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
