--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,18 @@
 
 
   <!-- Featured project -->
+  <div class="section-large" style="background-color: var(--purple);">
+    <div class="project-info-large">
+      <h4>2021 • Deloitte Digital</h4>
+      <h2>Epilepsy Foundation Discovery</h2>
+      <h3>I evaluated the overarching user experience of epilepsy.com and provided strategic recommendations that fed into a product roadmap and vision.</h3>
+      <button id="myBtn" onclick="location.href='ef.html';" value="Go to EF project page">
+        <h4><i class="fas fa-lock"></i> Learn More</h4>
+      </button>
+    </div>
+    <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
+  </div>
+
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
       <h4>2020 - 2021 • Deloitte Digital</h4>
