added EF proj to footer

--- a/ef.html
+++ b/ef.html
@@ -37,7 +37,7 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
-			<h3>EF Discovery & Redesign</h3>
+			<h3>Epilepsy Foundation Discovery & Redesign</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
@@ -50,7 +50,7 @@
 			<div class="title">
 				<div>
 					<h4>2021 • Deloitte Digital</h4>
-					<h1 style="color: black">EF Discovery & Redesign</h1>
+					<h1 style="color: black">Epilepsy Foundation Discovery & Redesign</h1>
 				</div>
 			</div>
 		</div>
