--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	<div class="full-width-mid-page" style="margin-bottom: 0">
 		<div class="panel dark" style="background-color: var(--purple); text-align: center; padding-top: 10%; padding-bottom: 10%;">
 			
-				<h2>This is a portfolio, after all.</h2>
+				<h2 style="color: black">This is a portfolio, after all.</h2>
 				<h3 style="width: 80%; margin-left: 10%; margin-right: 10%">You're probably here to see my project work. I have a limited selection online, but feel free to <a style="color: white" href='mailto:emporat@gmail.com'>email</a> me for more info!</h3>
 				<button class="secondary-btn" onclick="location.href='projects.html';">View Projects</button>
 
